fixed overflows

--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ html {
     justify-content: space-between;
     position: absolute;
     top: 0;
+    margin-bottom: 10px;
 
 
 }
@@ -76,6 +77,7 @@ html {
     background: url(media/frame.png);
     width: 70rem;
     height: 70rem;
+    max-width: 100vw;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -308,6 +310,12 @@ body {
   color: black;
   width: fit-content;
   text-align: center;
+}
+
+@media (max-width: 1199.98px) {
+  .container .content h2 {
+    font-size: 1.5rem;
+  }
 }
 
 
